alterações no note do rafa

--- a/css/paginasDeServicoPf.css
+++ b/css/paginasDeServicoPf.css
@@ -201,7 +201,7 @@
 
 }
 
-.btn_insert,.delete-btn {
+.btn_insert,.delete-btn, #btn-env-orcamento {
   font-size: 20px;
   padding: 15px !important;
   padding-top: 10px !important;
@@ -219,7 +219,7 @@
   text-transform: uppercase;
 
 }
-.btn_insert:hover,.delete-btn:hover {
+.btn_insert:hover,.delete-btn:hover, #btn-env-orcamento:hover {
   color: rgb(255, 255, 255);
   text-shadow: -2px 2px 10px #22a6ad;
   box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.767),
@@ -251,8 +251,9 @@
 .servico:nth-child(even) {
   background-color:#237a6c;  
   color: rgb(0, 0, 0);
-
-
+  font-weight: bold !important;
+  
+  
 }
 
 .servico:nth-child(odd) {
@@ -265,8 +266,8 @@
 .servico:nth-child(even) .lbl_servico_inserido {
 
   color:#d8d8d8 !important;
-
-
+  
+  
 }
 
 .dados_service,.lbl_servico_inserido{
@@ -301,4 +302,93 @@
   overflow-wrap: break-word;
   hyphens: auto;
 
+}
+/* ------------------------------------------------ */
+.orcamentos{
+  width: 100% !important;
+  height: 100% !important;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+.orcamento{
+  background-color: #0b3630;
+  padding:25px;
+  margin: 2%;
+  border-radius: 18px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+.campos_orcamento{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+.lbl_orcamento{
+  font-size: 35px !important;
+  font-weight: bold;
+  color:#1da790 !important;
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.dados_orcamento{
+  font-size: 28px !important;
+  color: rgb(238, 238, 238);
+  width: 60%;
+  text-align: center;
+  background: #081a17;
+  padding: 1%;
+  border-radius: 15px;
+  
+
+}
+#msg_cliente{
+  width: 80% !important;
+  text-indent: 35px;
+  text-align: justify;
+  overflow-wrap: break-word;
+  hyphens: auto;
+  background: #081a17;
+  padding: 2%;
+  border-radius: 15px;
+  overflow-y: auto;
+  
+}
+#orcamento{
+  background-color: transparent !important;
+  border: none;
+  border-radius: 7px;
+  border-bottom: 4px solid rgb(0, 0, 0); 
+  box-shadow: 0 0 5px black;
+  width: 100% !important;
+  margin: 0 !important;
+  height: 100%;
+  padding: 25px 0 10px 0 !important;
+  font-size: 28px;
+  color: white;
+  text-align: center
+}
+#orcamento::placeholder{
+ font-size: 28px;
+ text-transform: uppercase;
+ text-align: center;
+}
+.submit_orcamento{
+  width: 100% !important;
+  height: 100% !important;
+}
+#btn-env-orcamento{
+  width: 50%;
+  margin-left: 0%;
+  
+}
+.form_orcamento{
+  width: 40%;
+  display: flex;
+  place-items: center;
+  flex-direction: column;
 }
