--- a/css/paginasDeServicoPf.css
+++ b/css/paginasDeServicoPf.css
@@ -462,18 +462,15 @@
   display: flex;
   flex-direction: column;
   place-items: center;
+  background-color:#0b3630 !important;  
 }
 
 .realizado:nth-child(even) {
-  background-color:rgb(0, 0, 0);  
   color: rgb(222, 222, 222);
-
   font-weight: bold !important;
 }
 
 .realizado:nth-child(odd) {
-  /* background-color:#237a6c;   */
-  background-color:rgb(0, 0, 0);  
   color: rgb(222, 222, 222);
 
 }
@@ -496,6 +493,45 @@
   color:#187c6b !important;
   text-align: center !important;
   display: block;
+}
+.datas{
+  display: flex;
+  justify-content: space-evenly !important;
+  width: 100%;
+  margin: 10px 0 15px 0;
+  /* background-color:#237a6c;   */
+  
+}
+/* .realizado:nth-child(odd) {
+} */
+.data_contratacao{
+  margin: 5px 15px 0 0;
+  padding: 15px;
+  border-radius: 15px;
+
+  text-align: center !important;
+  width: 80%;
+  box-shadow: 0 0 10px black;
+  
+}
+.data_contratacao p{
+  margin-left:10%;
+
+}
+
+.data_realizacao{
+  width: 80%;
+  padding: 15px;
+  border-radius: 15px;
+  margin: 5px 0 0 15px;
+  
+  text-align: center !important;
+  text-align: center;
+  box-shadow: 0 0 10px black;
+}
+.data_realizacao p{
+  margin-left:10%;
+
 }
 .dados_realizados{
   background: #06241f !important;
