--- a/css/paginasDeServicoUsr.css
+++ b/css/paginasDeServicoUsr.css
@@ -12,11 +12,11 @@
 
 html, body{
     background: black !important;
-    width: 100%;
+    width: 100% !important;
 }
 .content {
     height: 100%;
-  width: 100%;
+  width: 100% !important;
 }
 
 .navServices {
@@ -92,7 +92,7 @@ html, body{
 
 .semServicos {
   height: 900px !important;
-  width: 100vh;
+  width: 100%;
   align-items: center;
   margin: auto;
 }
@@ -100,7 +100,7 @@ html, body{
 .semServicos p {
   position: relative;
   top: 45%;
-  left: 50%;
+  left: 53%;
   transform: translate(-50%, 0);
   font-size: 45px !important;
   color: rgba(27,92,81,1);
@@ -533,4 +533,15 @@ html, body{
   text-indent: 15px;
   text-align: justify !important;
   hyphens: auto !important;
+}
+.btns_orcamento{
+  width: 100% !important; 
+  height: 100% !important; 
+  display: flex;
+}
+.btn-success, .btn-danger{
+  font-size: 32px !important;
+  
+  width: 100% !important;
+
 }
