--- a/css/paginasDeServicoUsr.css
+++ b/css/paginasDeServicoUsr.css
@@ -124,8 +124,10 @@ html, body{
 }
 .top {
   text-align: center;
-  color: rgb(255, 255, 255);
+  color: rgb(43, 139, 118);
   height: 100% !important;
+  font-weight: bold;
+  font-size: 35px;
 }
 /* -------------inserir serviços----------------- */
 .formCadService {
@@ -323,6 +325,7 @@ html, body{
   background-color: #0b3630;
   padding:25px;
   margin: 2%;
+  margin-top: 0%;
   border-radius: 18px;
   width: 50%;
   display: flex;
@@ -509,15 +512,12 @@ html, body{
 }
 
 .data_realizacao{
-  
   width: 80%;
   padding: 15px;
   border-radius: 15px;
   margin: 5px 0 0 15px;
-
   text-align: center;
   box-shadow: 0 0 10px black;
-
 }
 .lbl_realizados{
   font-size: 32px;
@@ -530,8 +530,6 @@ html, body{
   color: #1da790 !important;
   font-size: 28px;
   letter-spacing: 2px;
-
-
 }
 .dados_realizados{
   background: #06241f !important;
@@ -541,6 +539,75 @@ html, body{
   text-align: center;
 }
 #desc_realizado{
+  text-indent: 15px;
+  text-align: justify !important;
+  hyphens: auto !important;
+}
+/* --------------------------------------------------- */
+.solicitacoes-pendentes{
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  margin-bottom: 25px;
+}
+.solicitacao-pendente{
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  padding: 25px;
+  border-radius: 25px;
+  height: 40%;
+  width: 30%;
+  background-color:rgb(18, 67, 56);  
+  color: rgb(222, 222, 222);
+}
+.lbl_solicitacao_pendente{
+  font-size: 32px;
+  font-weight: bold;
+  color: #1da790 !important;
+  text-align: center !important;
+  display: block;
+}
+.dados_pendentes{
+  background: #06241f !important;
+  padding: 10px;
+  border-radius: 15px;
+  width: 100%;
+  text-align: center;
+}
+/* ---------------------------------------------- */
+.servicosEmAndamento{
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+  margin-bottom: 25px;
+}
+.emAndamento{
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  padding: 25px;
+  border-radius: 25px;
+  height: 40%;
+  width: 30%;
+  background-color:rgb(18, 67, 56);  
+  color: rgb(222, 222, 222);
+}
+.lbl_emAndamento{
+  font-size: 32px;
+  font-weight: bold;
+  color: #1da790 !important;
+  text-align: center !important;
+  display: block;
+}
+.dados_andamento{
+  background: #06241f !important;
+  padding: 10px;
+  border-radius: 15px;
+  width: 100%;
+  text-align: center;
+}
+#desc_andamento{
   text-indent: 15px;
   text-align: justify !important;
   hyphens: auto !important;
