--- a/css/style_home.css
+++ b/css/style_home.css
@@ -1,203 +1,4 @@
 
-@font-face {
-  font-family: "cubic" ;
-  src: url(/Fonts/cubic.ttf) format(truetype);
-}
-
-
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100&display=swap");
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
-
-
-
-p{
-  font-size: 18pt !important;
-  font-family: "League Spartan", sans-serif;
-}
-
-h1,h2,h3,h4{
-  font-family: "Josefin Sans", sans-serif;
-  font-size: 36pt;
-}
-
-img {
-  user-select: auto;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-}
-
-.slogan_home h2{
-  text-shadow: none;
-  color: rgb( 0, 123, 111);
-}
-
-
-
-body{
-    background-color: #000000;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-*::selection {
-  color: #ffffff;
-  background: #0d6a5a;
-  border-radius: 10px;
-  text-shadow: -2px 2px 10px rgb(255, 255, 255);
-  padding: 15px;
-}
-*::-webkit-scrollbar-thumb{
-  height: 10%;
-  width: 10px;
-  border-radius: 25px;
-  background-color: rgb(0, 123, 111);
-}
-*::-webkit-scrollbar{
-  width: 10px;
-  height: 90%;
-  background-color: rgb(12, 12, 12);
-  border-radius: 25px;
-}
-
-
-/* ----------------------------------------------------------------------------------------------------------- */
-
-
-
-
-
-
-
-
-.header {
-  height: 80px;
-  width: 100%;
-  padding: 0px 20px;
-  box-sizing: border-box;
-  position: absolute;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: white;
-  background: linear-gradient(0deg, transparent, rgb(0, 128, 111));
-  height: 90px;
-  width: 100%;
-  top: 0;
-  left: 0;
-  align-items: center;
-  z-index: 9;
-  transition: background-color 0.3s ease;
-}
-
-.logo {
-  display: block;
-  width: 80px;
-  height: 80px;
-  float: left;
-  padding: 10px;
-}
-
-.title_nav{
-font-family: Arial, Helvetica, sans-serif;
-box-sizing: border-box;
-color: rgb(255, 255, 255);
-cursor: pointer;
-font-weight: 100;
-position: absolute;
-left:100px;
-top: 12px;
-padding: 10px;
-}
-
-.nav {
-  float: right;
-  list-style: none;
-  position: absolute;
-  right: 30px;
-}
-
-.nav li {
-  float: left;
-}
-
-.nav a {
-  display: block;
-  text-decoration: none;
-  padding: 20px;
-  font-size: 14pt;
-}
-
-.nav-links,.nav-link {
-  color: #ffffff;
-  text-decoration: none;
-}
-
-.nav-links:hover, .nav-link:hover {
-  color: white;
-  filter: drop-shadow( 2px 2px 10px white);
-  -webkit-transition: all 0.6s ease-in-out;
-  -o-transition: all 0.6s ease-in-out;
-  -ms-transition: all 0.6s ease-in-out;
-  -moz-transition: all 0.6s ease-in-out;
-  transition: all 0.6s ease-in-out;
-}
-
-.nav-links::after, .nav-link::after {
-  display: block;
-  margin: 0 auto;
-  margin-top: 5px;
-  width: 0;
-  height: 2px;
-  background-color: rgb(255, 255, 255);
-  content: "";
-  opacity: 0;
-  -webkit-transition: width 0.6s, opacity 0.8s;
-  -moz-transition: width 0.6s, opacity 0.8s;
-  transition: width 0.6s, opacity 0.8s;
-}
-
-.nav-links:hover::after,
-.nav-links:focus::after, .nav-link:hover::after,
-.nav-link:focus::after {
-  opacity: 1;
-  width: 100%;
-}
-
-.nav-responsive {
-  display: none;
-}
-
-.menu-icon {
-  display: none;
-  cursor: pointer;
-  float: right;
-  line-height: 80px;
-  font-size: 20px;
-}
-
-@media only screen and (max-width: 768px) {
-  .nav {
-    display: none;
-  }
-
-  .menu-icon {
-    display: block;
-  }
-
-  .nav-responsive {
-    display: block;
-    clear: both;
-    margin-top: 60px;
-
-  }
-  .nav-responsive li {
-    display: block;
-    float: none;
-  }
-}
-
-
 
 /* ----------------------------------------------------------------------------------------------------------- */
 
@@ -213,13 +14,16 @@ padding: 10px;
     height: 45pc;
     padding: 15pc 10px;
     opacity: 0;
-    transition: opacity 1s ease-in-out;
 }
+
 .screen_exibition_ini.apareceu { 
   opacity: 1;
 }
 
-
+.row{
+  width: 110% !important;
+  margin-left: -5%;
+}
 .slogan_home {
     color: rgb(0, 128, 111);
     margin-left: 240px;
@@ -295,7 +99,8 @@ padding: 10px;
 }
 
 .icon_lupa_barra_search_ini {
-    height: 30px;
+  background-color: #000000;
+  height: 30px;
     width: 30px;
     position: absolute;
     margin-left: 45%;
@@ -484,6 +289,7 @@ padding: 10px;
   background: linear-gradient(744deg,#02d4b1,#00917e 60%,#000000);
 }
 
+
 .infotop {
   height: 1000px;
   width: 600px;
@@ -495,7 +301,7 @@ padding: 10px;
   right: 0;
   color: rgb(255, 255, 255);
   font-weight: 600;
-  
+
 }
 
 .img_vantagens_tecnomade, .img_cncrt_erro_check{
@@ -565,7 +371,7 @@ padding: 10px;
   0% {
     transform: rotate(0deg);
   }
-  
+
   100% {
     transform: rotate(360deg);
   }
@@ -588,7 +394,7 @@ padding: 10px;
     width: 900px;
     border-radius: 50px;
     margin: 0 0 0 -80px;
-    
+
 }
 .box_text_info_garantia {
   position: relative;
@@ -619,7 +425,6 @@ padding: 10px;
   color: #ffffff;
   border-radius: 12px;
   padding: 15px;
-  
 }
 
 .img_garantia_segurança_tecno{
@@ -1000,7 +805,7 @@ padding: 10px;
 .conteiner_FAQ_duvida {
   margin: 0;
   padding: 0;
-  background: linear-gradient(200deg, #000000 50%, rgb(0, 128, 111), rgb(255, 255, 255) 60%);
+  background: linear-gradient(190deg, #000000 50%, rgb(0, 128, 111), rgb(255, 255, 255) 60%);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -1032,14 +837,17 @@ padding: 0; }
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
-  padding: 0 30px 0 70px;
+  padding: 0 70px 0 70px;
   height: 80px;
   display: block;
-  width: 100%;
+  width: 600px;
   text-align: left;
   border-radius: 15px;
   position: relative; 
   border: none;
+}
+.margin_ajust_faq{
+  margin-left: -100px;
 }
 
 .card-body{ color: #fff; }
@@ -1057,7 +865,7 @@ padding: 0; }
     border-radius: 15px;
     line-height: 100%;
     content: '\f067';
-    font-size: 10px;
+    font-size: 14pt;
     line-height: 18px;
     font-family: "Font Awesome 5 Free";
     font-weight: 900; 
@@ -1078,10 +886,16 @@ padding: 0; }
   color: #fff;
   background-image: -webkit-linear-gradient(-30deg, #000 0%, #00eeff 100%); }
 
-.faq .accordion .card .card-body { border-radius: 15px;}
+.faq .accordion .card .card-body { 
+  border-radius: 15px;
+  color:white;
+  font-size: 14pt;
+  text-align: justify;
+}
 
 .faq .accordion .card {
   border: none;
+  width: 630px;
   margin-bottom: 30px;
   border-radius: 15px;
   background-color: black;
@@ -1110,265 +924,6 @@ padding: 0; }
 
 
 
-#btnTopo {
-  display: none;
-  position: fixed;
-  bottom: 100px;
-  right: 20px;
-  background-color: #000000;
-  box-shadow: 0px 0px 5px 3px #00917e00;
-  border: none;
-  border-radius: 50px;
-  height: 50px;
-  width: 50px;
-  font-size: 16px;
-  cursor: pointer;
-  z-index: 10;
-  box-shadow: 0 0 5px 3px rgb(0, 255, 221);
-}
-.arrow_icon_bnt_top{
-  fill:#00ffdd;
-}
-
-#btnTopo:hover {
-  box-shadow: 0 0 5px 3px rgb(0, 128, 111);
-}
-.arrow_icon_bnt_top{
-  fill:rgb(0, 128, 111);
-}
-
-.arrow_icon_bnt_top{
-  fill:#00917e;
-}
-
-
-.footer-section {
-background: #000000;
-position: relative;
-border-top: solid 1px #0e0e0e;
-}
-
-.footer-cta {
-border-bottom: 1px solid #00917e;
-}
-
-.single-cta i {
-color: #00917e;
-float: left;
-margin-top: 8px;
-}
-
-.cta-text {
-padding-left: 15px;
-display: inline-block;
-}
-
-.cta-text h4 {
-color: #ffffff;
-
-font-weight: 600;
-margin-bottom: 2px;
-}
-.cta-text span {
-color: #757575;
-font-size: 14pt;
-}
-
-.footer-content {
-position: relative;
-z-index: 2;
-
-}
-
-
-
-.footer-logo {
-  display: flex; height: 80px; max-width: 800px;
-}
-
-
-
-.footer-text p {
-margin-bottom: 14px;
-color: #7e7e7e;
-line-height: 28px;
-}
-
-.footer-social-icon {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  gap: 25px;
-}
-
-#Layer_1icon:hover{
-  fill: #000000;
-  filter: drop-shadow( 0 0 10px rgb(0, 153, 138) );
-}
-
-#Layer_2icon:hover{
-  fill: #000000;
-  filter: drop-shadow( 0 0 10px rgb(0, 153, 138) );
-}
-
-#Layer_3icon:hover{
-  fill: #000000;
-  filter: drop-shadow( 0 0 10px rgb(0, 153, 138) );
-}
-
-.footer-social-icon span {
-color: #ffffff;
-display: block;
-font-weight: 700;
-font-family: 'Poppins', sans-serif;
-margin-bottom: 20px;
-}
-
-.footer-social-icon a {
-color: #ffffff;
-margin-right: 15px;
-}
-
-.footer-social-icon svg{
-  width: 50px;
-  height: 50px;
-}
-
-.footer-widget-heading h3 {
-color: #ffffff;
-font-weight: 600;
-margin-bottom: 40px;
-position: relative;
-font-size: 18pt;
-text-align: left;
-}
-
-.footer-widget-heading h3::before {
-content: "";
-position: absolute;
-left: 0;
-bottom: -15px;
-height: 2px;
-width: 50px;
-background: #00917e;
-}
-
-.footer-widget ul li {
-display: block;
-float: left;
-width: 50%;
-margin-bottom: 12px;
-}
-
-.ajst_tms_footer_text_link{
-  margin-left: -50px;
-  text-align: left;
-}
-
-.footer-widget ul li a:hover{
-color: #00917e;
-}
-
-.lista_de_links{
-  margin: 0 0 0 -30px;
-}
-
-.footer-widget ul li a {
-color: #878787;
-font-size: 14pt;
-text-transform: capitalize;
-}
-
-.subscribe-form {
-position: relative;
-overflow: hidden;
-}
-
-.subscribe-form input {
-width: 100%;
-padding: 14px 28px;
-background: #2E2E2E;
-border: 1px solid #2E2E2E;
-color: #fff;
-}
-
-.subscribe-form button {
-  position: absolute;
-  right: 0;
-  background: #00917e;
-  padding: 13px 10px;
-  border: 1px solid #00917e;
-  top: 0;
-}
-
-.subscribe-form button i {
-color: #fff;
-font-size: 22px;
-transform: rotate(-6deg);
-}
-
-.copyright-area{
-background: linear-gradient(180deg, black , rgb(0, 128, 111) 65%);
-padding: 25px 0;
-}
-
-.copyright-text p {
-margin: 0;
-color: #ffffff;
-}
-
-.copyright-text p, .copyright-text p a{
-  width: 1200px;
-  color: #ffffff;
-  text-align: center;
-}
-
-.copyright-text p a:hover{
-    color: #00eeff;
-}
-
-.copyright-text p a{
-color: #ffffff;
-font-size: 18pt;
-}
-
-.footer-menu li {
-display: inline-block;
-margin-left: 20px;
-}
-
-.footer-menu li:hover a{
-color: #00ffdd;
-}
-
-.footer-menu li a {
-font-size: 18pt;
-color: #ffffff;
-}
-
-.footer_btn_enviar{
-  margin-top: -10px;
-}
-
-.social__icon {
-  height: 40px;
-  width: 40px;
-	color: #fff;
-	text-decoration: none;	
-}
-
-.social__icon:hover {
-	transform: scale(1.2);	
-}
-
-.ajuste_tamanho{
-  height: 45px;
-  width: 45px;
-  margin: 0 5px;
-  filter: invert(1);
-}
-  
-   
 :root{
   --chat-thread-bgd-color: rgba(25, 147, 147, 0.2);
   --chat-thread-msg-arrow-size: 10px;
@@ -1381,123 +936,3 @@ color: #ffffff;
 /* ----- chat ficava aqui */
 
 
-
- 
-.login_container {
-	z-index: 10;
-  padding: 60px 30px 30px 30px;
-  position: absolute;
-  right: 60px;
-  top:80px;
-  width: 100%;
-	max-width: 380px;
-	min-height: 590px;
-	background:linear-gradient( 120deg, black 50%, rgb(0,123,111), white);
-  border-radius: 0px;
-	box-shadow: 0 50px 70px -20px rgb(0, 123, 111);
-}
-
-.login_container:after {
-	display: inline-block;
-	position: absolute;
-	z-index: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	box-shadow: 0 -20px 150px -20px rgba(104, 102, 102, 0.5);
-}
-
-.btn_fechar_login{
-  position: absolute;
-  top: 20px;
-	right: 20px;
-}
-
-.login_nav {
-	position: relative;
-	padding: 0;
-	margin: 1rem 0 2em 0;
-}
-
-.login_nav_item {
-	list-style: none;
-	display: inline-block;
-}
-
-.login_nav_item{
-  margin-left: 15px
-}
-
-
-.login_nav_item a {
-	position: relative;
-	color: rgba(255, 255, 255, 0.5);
-  margin-top: 20px;
-	text-decoration: none;
-	font-weight: 500;
-	font-size: 1.25rem;
-	transition: .20s all ease;
-}
-
-.login_nav_item.active a,
-.login_nav_item a:hover{
-	color:#ffffff;
-	transition: .15s all ease;
-}
-
-.login_nav_item a:hover:after,
-.login_nav_item.active a:after{
-	background-color: rgb(255, 255, 255);
-	height: 2px;
-	right: 0;
-	bottom: 2px;
-	border-radius: 0;
-	transition: .20s all ease;
-}
-.login_label {
-  margin-bottom: 10px;
-	display: block;
-	padding-left: 1rem;
-}
-
-.login_label,
-.login_label_checkbox {
-	color: rgba(255, 255, 255, 0.5);
-	text-transform: uppercase;
-	font-size: 12pt;
-	margin-bottom: 1rem;
-}
-
-.login_label_checkbox {
-	display: inline-block;
-	position: relative;
-	padding-left: 1.5rem;
-	margin-top: 30px;
-	color: #ffffff;
-	font-size: 11pt;
-	text-transform: inherit;
-}
-
-.breakLine35{
-  background-color: #ffffff;
-  margin: 40px 0px 30px 0px;
-}
-
-.DontCadastroLink{
-  color: #fff;
-  padding: 0 30px;
-}
-
-
-#visuOff, #visuOn{
-  margin-top: -47px;
-  margin-right: 10px;
-  display: block;
-  position: absolute;
-  right: 40px;
-}
-
-h3, h2{
-  text-shadow: none !important;
-}
