--- a/css/style_lg.css
+++ b/css/style_lg.css
@@ -1,10 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100&display=swap");
-
-@font-face {
-  font-family: "ttfors";
-  src: url("/Fonts/TT\ Fors\ Trial\ Bold.ttf") format("truetype");
-}
-
 * {
   margin: 0%;
   padding: 0%;
@@ -33,14 +26,16 @@ body {
   background-size: cover;
   align-items: center;
 }
-*::placeholder, label{
-font-weight: bold;
-letter-spacing: 1px;
+
+h2, h1,h3,h4, p {
+  text-align: center;
+  font-family: "League Spartan", sans-serif;
 }
+
 .screenOptionlogin {
   /* background: linear-gradient(5deg, #000000, rgba(0, 123, 111, 0.111), rgb(0, 0, 0)); */
   background-color: #000000;
-  height: 550px;
+  height: 600px;
   width: 450px;
   padding: 50px;
   display: flex;
@@ -55,12 +50,11 @@ letter-spacing: 1px;
 }
 
 .screenOptionlogin h2 {
+  
   text-align: center;
-  /* text-shadow: -2px 2px 10px rgba(0, 219, 208, 0.603); */
   color: rgb(0, 79, 68);
-  font-family: "ttfors";
   font-weight: bold;
-  font-size: 36pt;
+  font-size: 38pt;
   margin-top: 60px;
   z-index: 10;
 }
@@ -69,7 +63,6 @@ letter-spacing: 1px;
   text-align: center;
   margin: 25px 0;
   color: rgb(0, 148, 128);
-  text-shadow: 0px 0px 15px rgb(20, 220, 193);
   font-family: "League Spartan", sans-serif;
   font-size: 18pt;
   z-index: 10;
@@ -77,14 +70,15 @@ letter-spacing: 1px;
 
 .animation_rotate,
 .animation_rotate2 {
-  width: 900px;
-  height: 5px;
-  background: linear-gradient(45deg, #000000a6, rgb(20 220 193 / 25%));
-  background-size: 200% 200%;
-  animation: rotating 10s infinite, neonLine 5s backwards infinite;
-  position: relative;
-  top: -150px;
-  left: -120px;
+     width: 1000px;
+    height: 5px;
+    background: linear-gradient(45deg, #000000a6, rgb(20 220 193 / 25%));
+    background-size: 200% 200%;
+    animation: rotating 10s infinite, neonLine 5s backwards infinite;
+    position: relative;
+    top: -150px;
+    left: -212px;
+    z-index: 1;
 }
 
 .animation_rotate2 {
@@ -182,7 +176,7 @@ button[type="reset"]:hover {
   padding: 0;
   height: 13pt;
   width: 100%;
-
+  
 }
 
 .text-container {
@@ -206,18 +200,20 @@ button[type="reset"]:hover {
 .endPf,
 .endUsr {
   padding: 20px;
-  background: rgb(0, 0, 0);
-  width: 100%;
-  border-radius: 10px;
-  min-height: 400px;
-  min-width: 450px;
-  overflow-y: auto;
-  text-align: center;
-  display: grid;
-  border: 3px solid #19a58e;
-  border-radius: 30px;
-  transition: opacity 1s ease;
-  animation: fadeIn 2s ease forwards;
+    background: rgb(0, 0, 0);
+    width: 100%;
+    border-radius: 10px;
+    /* min-height: 472px; */
+    height: 940px;
+    min-width: 450px;
+    overflow: hidden;
+    overflow-y: auto;
+    text-align: center;
+    display: grid;
+    border: 3px solid #19a58e;
+    border-radius: 30px;
+    transition: opacity 1s ease;
+    animation: fadeIn 2s ease forwards;
 }
 
 @keyframes fadeIn {
@@ -240,9 +236,6 @@ button[type="reset"]:hover {
 .endUsr {
   position: relative;
   margin-left: -10px;
-
-
-
   transition: opacity 2s ease;
 }
 
@@ -291,8 +284,7 @@ button[type="reset"]:hover {
 .titleForms {
   text-align: center;
   color: #11846f;
-  font-family: "ttfors";
-  font-weight: bold;
+  font-size: 32pt;
 }
 
 .buttonsForm input[type="submit"] {
@@ -302,7 +294,6 @@ button[type="reset"]:hover {
 label,
 input[type="submit"]{
   display: block;
-
 }
 
 input:not([type="submit"]) {
@@ -352,7 +343,6 @@ label,
   text-align: left;
   margin-left: 11%;
   font-size: 20px;
-  font-family: "ttfors";
   color: #49c5b0;
   margin-top: 2%;
 }
@@ -366,7 +356,7 @@ label,
   /* margin: auto; */
   border: 2px solid transparent;
   padding: 15px;
-  margin: 10px 0 10px 5px;
+  margin: 10px 0 10px 20px;
   display: flex;
   position: relative;
   border-radius: 7px;
@@ -390,7 +380,7 @@ label,
   position: absolute;
   display: inline-block;
   top: 0;
-  left: 20px;
+  left: 15px;
   padding: 5px;
 }
 
@@ -419,6 +409,20 @@ input[type="date"]::-webkit-datetime-edit-text {
   color: rgb(18, 151, 131) !important;
 }
 
+.Error_data_container input[type="date"]::-webkit-datetime-edit-text {
+  color: #e63636 !important;
+}
+
+.clear_data_error_container input[type="date"]::-webkit-datetime-edit-text {
+  color: rgb(18, 151, 131) !important;
+}
+
+.error {
+  color: #e63636;
+}
+
+.lblDtNasPf{margin-bottom: 10px;}
+
 input[type="date"] {
   border: 3px  solid #49c5b0;
   width: 42%;
@@ -426,7 +430,6 @@ input[type="date"] {
   border-radius: 8px;
   margin: -2% -15% 0% 11%;
   display: block;
-  font-family: "ttfors";
   font-size: 20px;
   line-height: 25px;
 }
@@ -444,11 +447,8 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 #lblDtNas {
   margin: 2% 0 2% 11%;
   width: 100%;
-  font-family: "ttfors";
 }
-.dtNas{
-  margin-top: 5px !important;
-}
+
 input:focus::-webkit-input-placeholder {
   color: rgb(160, 158, 158);
   font-size: 20px;
@@ -506,7 +506,6 @@ input::-webkit-input-placeholder {
 }
 
 .contentBoxTitle {
-  font-family: "ttfors";
   font-weight: bold;
   color: rgb(0, 148, 128);
   text-transform: uppercase;
@@ -514,6 +513,7 @@ input::-webkit-input-placeholder {
   filter: drop-shadow(2px 2px 15px black);
   margin: 15px 0 0 0;
   z-index: 10;
+  font-size: 32pt;
   position: relative;
 }
 
@@ -526,7 +526,6 @@ input::-webkit-input-placeholder {
   margin: 10px 0;
   font-size: 22pt;
   width: 425px;
-  font-family: "ttfors";
   color: rgb(0, 148, 128);
   z-index: 10;
   position: relative;
@@ -613,4 +612,18 @@ input::-webkit-input-placeholder {
 
 .titleEnd {
   margin: 10px auto -10px auto;
+}
+
+.linkMlg{
+  margin-top: 10px;
+}
+
+.linksCad, .linkMlg {
+  margin-left: -80px;
+  position: absolute;
+  font-size: 14pt;
+}
+
+.lgPf, .lgUsr{
+  height: 427px;
 }
