--- a/css/style_lg.css
+++ b/css/style_lg.css
@@ -50,7 +50,6 @@ h2, h1,h3,h4, p {
 }
 
 .screenOptionlogin h2 {
-  
   text-align: center;
   color: rgb(0, 79, 68);
   font-weight: bold;
@@ -225,6 +224,33 @@ button[type="reset"]:hover {
     opacity: 1;
   }
 }
+
+.cdPf::-webkit-scrollbar-track {
+  background-color: rgb(12, 12, 12);
+  border-radius: 6px; 
+  height: 10%;
+  margin: 30px 30px 30px 130px ;
+  padding: 90px;
+}
+
+
+.cdPf::-webkit-scrollbar{
+  background-color: transparent;
+}
+
+.cdUsr::-webkit-scrollbar-track {
+  background-color: rgb(12, 12, 12);
+  border-radius: 6px; 
+  height: 10%;
+  margin: 30px 30px 30px 130px ;
+  padding: 90px;
+}
+
+
+.cdUsr::-webkit-scrollbar{
+  background-color: transparent;
+}
+
 
 .required::after {
   content: "* Required Field";
@@ -507,7 +533,7 @@ input::-webkit-input-placeholder {
 
 .contentBoxTitle {
   font-weight: bold;
-  color: rgb(0, 148, 128);
+  color: rgb(0, 79, 68);
   text-transform: uppercase;
   text-align: center;
   filter: drop-shadow(2px 2px 15px black);
@@ -615,11 +641,21 @@ input::-webkit-input-placeholder {
 }
 
 .linkMlg{
+  margin-top: -23px;
+}
+
+.linksCad{
   margin-top: 10px;
 }
 
+.div_ajust_linksCad_linkMlg {
+  display: flex;
+  justify-items: center;
+  justify-content: space-around;
+}
+
+
 .linksCad, .linkMlg {
-  margin-left: -80px;
   position: absolute;
   font-size: 14pt;
 }
