alterção da aula

--- a/css/style_home.css
+++ b/css/style_home.css
@@ -221,6 +221,25 @@
   background: linear-gradient(170deg, #000000 50%, rgb(0, 128, 111)  ,  rgb(0, 0, 0) 60%);
 }
 
+/* ajustes vantagens da tecnomade */
+
+/* padding: 0;
+width: 70%;
+justify-self: center;
+display: flex;
+padding: 0 200px;
+justify-content: center;
+margin: 0;
+flex-wrap: wrap;
+
+padding: 0;
+width: 70%;
+justify-self: center;
+display: flex;
+padding: 0 200px;
+justify-content: center;
+margin: 0;
+flex-wrap: wrap; */
 
 
 .bloco_vantagens_tecomade{
