--- a/css/cartao.css
+++ b/css/cartao.css
@@ -345,3 +345,28 @@ button:hover {
   top: -25%;
   filter: drop-shadow(0 0 10px rgb(37, 37, 37));
 }
+
+.bloco_alerta{
+  height: 100%;
+  width: 100%;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.852);
+  top: 0;
+  position: absolute;
+  z-index: 99;
+}
+
+div .card_alerta{
+    background-color: black;
+    width: 900px;
+    padding: 50px;
+    border-radius: 20px;
+    border: 5px solid #00917e;
+    min-height: 500px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    top: 27%;
+    margin: auto;
+}
