--- a/css/viewPerfilPfForUsr.css
+++ b/css/viewPerfilPfForUsr.css
@@ -42,7 +42,7 @@ width: 100%;
 .avaliacao {
     width: 340px;
     margin-bottom: 50px;
-    margin-top: 250px;
+    margin-top: 385px;
 }
 
 .estrelas {
@@ -68,13 +68,14 @@ width: 100%;
 #btn-contratar {
         position: absolute;
         right: 140px;
-        top: 200px;
+        top: 325px;
         text-align: center;
         color: #00917e;
         font-weight: bold;
         font-size: 24px;
         font-size: 26px;
-        background-color: #000000;
+        background-color: #000000ec;
+        box-shadow: inset 0 0 10px #00917e;
         border: solid 2px #00917e;
         width: 350px;
         padding: 10px;
@@ -84,8 +85,7 @@ width: 100%;
 #btn-contratar:hover {
     scale: 1.05;
     text-decoration: none;
-    filter: drop-shadow( 0 0 10px #00917e);
-    text-shadow: 0 0 10px #00917e;
+    box-shadow: 0 0 10px #00917e;
 }
 
 .estrelas label:before {
@@ -110,23 +110,29 @@ width: 100%;
 }
 
 .nome_profissional_tt{
-    color: aliceblue;
+    color: #00917e;
     position: absolute;
-    margin-top: -55px;
+    margin-top: -45px;
+    font-size: 28pt;
     margin-left: 15px;
 }
 
 .descPf {
-    background-color: #081a17;
-    border-radius: 10px;
-    padding: 25px;
-    overflow: scroll;
-    width: 700px;
+    background-color: transparent;
+    /* border-left: 15px solid #00917e;
+    border-right: 15px solid #00917e; */
+    /* box-shadow: inset 0 0 60px #00917e; */
+    /* padding: 30px 70px; */
+    /* border-radius: 25px; */
+    overflow: auto;
+    width: 780px;
     display: flex;
     hyphens: auto;
     word-wrap: break-word;
     text-align: justify;
 }
+
+
 #cat{
     color: rgb(0, 148, 128);
     margin-bottom: 20px;
@@ -139,26 +145,29 @@ width: 100%;
 
 .cat {
     color: aliceblue;
-    list-style-type: square;
+    list-style-type: circle;
     text-align: left;
     font-size: 20pt;
     position: relative;
     margin-left: 60px;
-    width: 400px;
+    width: 450px;
 }
+
+.cat li::marker{ color: rgb(0, 148, 128); }
 
 .sequiser{display: flex;}
 
 .top {
+    
     width: 100%;
-    height: 385px;
+    margin-top: -80px;
+    height: 500px;
     display: flex;
     align-items: center;
     padding: 25px 10px 25px 10px;
     position: relative;
     top: 100%;
-    border-bottom: #00917e solid 5px ;
-    background-color: #000000;
+    border-bottom: #00917e solid 2px ;
     margin-bottom: 10pc;
 }
 
@@ -169,6 +178,14 @@ p {
     font-size: 25pt;
     display: block;
 }
+
+label{
+    text-align: center;
+    width: 100%;
+    font-size: 28pt;
+    color: #00917e;
+}
+
 #lbl_desc{
     text-align:center;
     width: 100%;
@@ -193,5 +210,201 @@ form {
 
 .dd_info_pf label {
     font-size: 28pt;
+    text-align: left;
     color: #00917e;
+}
+
+.divis_line_green {
+    height: 2px;
+    margin: 50px auto;
+    background-color: #00917e;
+    animation: grow alternate-reverse 5s ease-out infinite; /* Define a animação */
+}
+
+@keyframes grow {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+.bloco_comentarios_pf{
+    padding: 50px;
+    width: 100%;
+    display: flex;
+    /* align-content: center; */
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(170deg, #000000 50%, rgb(0, 128, 111)  ,  rgb(0, 0, 0) 60%);
+}
+
+.tt_coments_for_pf h2, .tt_work_do_for_pf h2 {
+    font-size: 28pt;
+    color: #00917e;
+    margin: 0 0 50px 0;
+}
+
+.comentario_for_pf{
+    height: 530px;
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    background-color: #000000da;
+    border-left: 15px solid #00917e;
+    border-right: 15px solid #00917e; 
+    box-shadow: inset 0 0 60px #00917e;
+    border-radius: 25px; 
+    justify-content: space-around;
+}
+
+.comentario_for_pf h3{
+    font-size: 28pt;
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+
+.bloco_work_do_for_pf{
+    padding: 50px 50px 200px 50px;;
+    width: 100%;
+    display: flex;
+    align-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+.carrossel_works_pf {
+    position: relative;
+    width: 950px;
+    height: 500px;
+    margin: 0 auto;
+}
+
+.carousel_inner_pf {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.item_slide_of_car img {
+    margin: auto;
+    width: 950px;
+    height: 500px;
+    border: #00917e solid 2px;
+    border-radius: 20px;
+    filter: brightness(0.5);
+}
+
+.item_slide_of_car {
+    position: relative;
+    display: none;
+}
+
+.slide_active_pf {
+    display: block;
+}
+
+.carousel_control {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    transform: translateY(-50%);
+}
+
+.bnt_left, .bnt_right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    cursor: pointer;
+    background-color: #000000;
+    color: #00917e;
+    border: solid 2px #00917e;
+    height: 70px;
+    width: 70px;
+    font-size: 45pt;
+    text-align: center;
+    border-radius: 50%;
+    filter: drop-shadow( 0 0 10px rgb(0, 128, 111));  
+}
+    
+.bnt_left:hover, .bnt_right:hover{
+    background: linear-gradient(120deg, rgb(0, 128, 111) 5%, #000000);
+    color: white;
+}
+
+
+.bnt_left:focus, 
+.bnt_right:focus,
+.bnt_left:active, 
+.bnt_right:active{
+    outline: none;
+}
+
+.icon_btn_right, .icon_btn_left{
+    position:absolute;
+    margin-top: -50px;
+    margin-left: -27px;
+}
+.icon_btn_right{
+    margin-left: -17px;
+}
+
+.bnt_left {
+    left: -45rem;
+}
+
+.bnt_right {
+    right: -45rem;
+}
+
+.carousel_indicators {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.indicatodor_car {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: #4c00ff;
+    border-radius: 50%;
+    margin: 40px 5px 5px 5px;;
+    cursor: pointer;
+}
+
+.indicatodor_active {
+    background-color: #00917e;
+}
+
+.info_about_work{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    height: 300px;
+    width: 600px;
+    top: 300px;
+    left: 30px;
+    padding: 20px;
+    z-index: 10;
+    overflow: hidden;
 }
