--- a/css/cartao.css
+++ b/css/cartao.css
@@ -350,23 +350,74 @@ button:hover {
   height: 100%;
   width: 100%;
   display: block;
-  background-color: rgba(0, 0, 0, 0.852);
+  background-color: rgba(0, 0, 0, 0.877);
   top: 0;
   position: absolute;
-  z-index: 99;
+  z-index: 10;
+  transition: opacity 1s ease;
+  animation: fadeIn 2s ease forwards;
 }
 
-div .card_alerta{
+.card_alerta{
     background-color: black;
-    width: 900px;
-    padding: 50px;
+    width: 1145px;
+    padding: 80px 50px 50px 50px; 
     border-radius: 20px;
     border: 5px solid #00917e;
     min-height: 500px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    position: relative;
-    top: 27%;
-    margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
+    filter: drop-shadow( 0 0 60px #00917e);
+    transition: opacity 1s ease;
+    animation: fadeIn 2s ease forwards;
 }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+
+h2.Tt_alert {
+  color: rgb(0, 128, 111);
+  font-size: 38pt;
+  margin-bottom: 35px;
+}
+
+h2.text_equipe_tt {
+  color: rgb(0, 128, 111);
+  font-size: 20pt;
+  position: relative;
+  margin: 25px 745px 25px 0;
+}
+
+.card_alerta p {
+  color: #6c757d;
+  text-align: justify;
+  font-size: 18pt;
+}
+
+.bnt_close_aleta{
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  height: 50px;
+  width: 50px;
+  fill: #00917e;
+}
+
+.bnt_close_aleta:hover{
+    transform: scale(1.2);
+    filter: drop-shadow( 0 0 20px #00917e);
+  }
