estilos na página de avaliação

--- a/css/paginasDeServicoUsr.css
+++ b/css/paginasDeServicoUsr.css
@@ -589,6 +589,7 @@ html, body{
   border-radius: 15px;
   width: 100%;
   text-align: center;
+  font-size: 22px !important;
 }
 /* ---------------------------------------------- */
 .servicosEmAndamento{
