--- a/css/contratService.css
+++ b/css/contratService.css
@@ -7,8 +7,121 @@
     width: 100%;
     padding: 50px;
 }
+html,body{
+    height: 100%;
+}
 
-.card-text,
+.container_dth_services h1{
+    margin-bottom: 80px;
+}
+
 .card-title {
-    color: black;
+    color: #006356 !important;
+    font-size: 28pt !important;
+    margin-bottom: 20px !important;
+}
+
+.card-text{
+    color: rgb(70, 70, 70);
+    font-size: 20pt;
+    text-align: justify;
+}
+.mensagem_cliente, .color_ajst{
+    color: #00917e;
+    font-size: 20pt;
+    padding: 10px 0 ;
+}
+
+.card-body_contrat{
+    background-color: black;
+    color: white;
+    filter: drop-shadow(0 0 60px #00917e);
+    border: 5px solid #00917e;
+    border-radius: 25px;
+    padding: 50px;
+    width: 100em;
+    transition: opacity 1s ease;
+    animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+ #mensagem_cliente{
+    background-color: #121313 ;
+    margin: 10px 0 30px 0;
+    color: aliceblue;
+    font-size: 20pt;
+    outline: none;
+    border: #00917e solid 2px;
+ }
+
+ #mensagem_cliente::placeholder{
+    color: #ffffff;
+ }
+
+ .form-control:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+
+
+ .error-message {
+    color: red;
+    display: none;
+    font-size: 18pt;
+}
+
+
+.btn-enviar_descript_ctt  {
+    --green: rgb(0,128,111);
+    font-size: 16pt;
+    font-weight: 600;
+    height: 65px;
+    width: 350px;
+    padding: 0.7em 2.7em;
+    letter-spacing: 0.06em;
+    position: relative;
+    font-family: inherit;
+    border-radius: 0.6em;
+    overflow: hidden;
+    transition: all 0.3s;
+    line-height: 1.4em;
+    margin: 20px 0;
+    border: 2px solid var(--green);
+    background: linear-gradient(to right, rgba(27, 253, 156, 0.1) 1%, transparent 40%,transparent 60% , rgba(27, 253, 156, 0.1) 100%);
+    color: var(--green);
+    box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.685), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+  }
+  
+  .btn-enviar_descript_ctt:hover {
+    color: #ffffff;
+    box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.767), 0 0 9px 3px rgba(27, 253, 156, 0.2);
+  }
+  
+  .btn-enviar_descript_ctt:before {
+    content: "";
+    position: absolute;
+    left: -4em;
+    width: 4em;
+    height: 100%;
+    top: 0;
+    transition: transform .4s ease-in-out;
+    background: linear-gradient(to right, transparent 1%, rgba(0, 125, 110, 0.596), rgba(0, 125, 110, 0.596) 60% , transparent 100%);
+  }
+  
+  .btn-enviar_descript_ctt:hover:before {
+    transform: translateX(30em);
+  }
+  
+  div#char_count {
+    float: inline-end;
+    font-size: 18pt;
 }
