ajuste navbar dropdown

--- a/css/perfilPf.css
+++ b/css/perfilPf.css
@@ -318,11 +318,11 @@ textarea{
   padding-left: 55px;
 }
 .sem_foto{
-  border: red 5px solid !important;
+  border: #c10113 5px solid !important;
 
 }
 .sem_desc{
-  border: red 5px solid !important;
+  border: #c10113 5px solid !important;
 
 }
 .span_sem_desc{
