--- a/css/perfilUsr.css
+++ b/css/perfilUsr.css
@@ -60,7 +60,7 @@ html {
 .sem_foto{
   margin-left: 50px !important;
   margin-top: 500px !important;
-  border: rgb(203, 7, 7) 5px solid !important;
+  border: #c10113 5px solid !important;
 
 }
 .imgUsr_cad{
