--- a/css/style_nav.css
+++ b/css/style_nav.css
@@ -354,6 +354,18 @@ ul .dropdown_menu {
   border: #00806f solid 2px;
   background: linear-gradient(180deg, rgb(0, 128, 111), black  10%, rgba(0, 0, 0, 0.959) ) ;
   width: 200px;
+  transition: opacity 1s ease;
+  animation: fadeIn 1s ease forwards;
+}
+
+@keyframes fadeIn {
+from {
+  opacity: 0;
+}
+
+to {
+  opacity: 1;
+}
 }
 
 .dropdown-element{
