--- a/css/paginasDeServicoPf.css
+++ b/css/paginasDeServicoPf.css
@@ -9,6 +9,25 @@
   font-weight: bold;
 }
 
+*::selection {
+  color: #ffffff;
+  background: #0d6a5a;
+  border-radius: 10px;
+  text-shadow: -2px 2px 10px rgb(255, 255, 255);
+  padding: 15px;
+}
+*::-webkit-scrollbar-thumb{
+    height: 10%;
+    width: 10px;
+border-radius: 25px;
+background-color: rgb(0, 123, 111);
+}
+*::-webkit-scrollbar{
+  width: 10px;
+  height: 90%;
+  background-color: rgb(12, 12, 12);
+  border-radius: 25px;
+}
 
 body{
   background-color: black !important;
@@ -205,11 +224,6 @@ body{
   height: 100%;
 
 }
-.option_insert{
-
-}
-
-
 .btn_insert,.delete-btn, #btn-env-orcamento, .btn_success {
   font-size: 20px;
   padding: 15px !important;
@@ -344,14 +358,13 @@ body{
 .dados_orcamento{
   font-size: 28px !important;
   color: rgb(238, 238, 238);
-  width: 60%;
+  width: 80%;
   text-align: center;
   background: #081a17;
   padding: 1%;
   border-radius: 15px;
-  
-
 }
+
 #msg_cliente{
   width: 80% !important;
   text-indent: 35px;
@@ -364,20 +377,40 @@ body{
   overflow-y: auto;
   
 }
+
 #orcamento{
+  background-color: #081a17 !important;
+  border: none;
+  border-radius: 15px;
+  width: 200%;
+  display: block;
+  margin-bottom: 1rem !important;
+  height: 100%;
+  padding: 20px !important;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  outline: none;
+}
+
+
+
+/* #orcamento{
   background-color: transparent !important;
   border: none;
   border-radius: 7px;
   border-bottom: 4px solid rgb(0, 0, 0); 
   box-shadow: 0 0 5px black;
   width: 100% !important;
+  display: block;
   margin: 0 !important;
   height: 100%;
   padding: 25px 5px 10px 5px !important;
   font-size: 28px;
   color: white;
   text-align: center
-}
+} */
+
 #orcamento::placeholder{
  font-size: 28px;
  text-transform: uppercase;
@@ -398,6 +431,29 @@ body{
   place-items: center;
   flex-direction: column;
 }
+
+
+.msg_for_cliente{
+  background-color: #081a17 !important;
+  border: none;
+  border-radius: 15px;
+  width: 200%;
+  display: block;
+  margin-bottom: 1rem !important;
+  height: 100%;
+  padding: 20px !important;
+  font-size: 28px;
+  color: white;
+  text-align: justify;
+  outline: none;
+}
+
+.msg_for_cliente:focus,.msg_for_cliente:active{
+  
+}
+
+
+
 /* ----------------------------------- */
 .contratacaoes{
   width: 100%;
