--- a/css/paginasDeServicoUsr.css
+++ b/css/paginasDeServicoUsr.css
@@ -547,6 +547,7 @@ html, body{
   padding: 10px;
   border-radius: 15px;
   width: 100%;
+  font-size: 22px;
   text-align: center;
   margin-top: 5px !important;
   margin-bottom: 5px !important;
