--- a/css/paginasDeServicoPf.css
+++ b/css/paginasDeServicoPf.css
@@ -515,8 +515,9 @@ button.closeButton {
   background-color: #06241f;
   border-radius: 15px;
   color: white;
+  font-size: 22px !important;
   padding:10px;
-  width: 80%;
+  width: 90%;
   text-align: center !important;
   hyphens: auto;
 }
