--- a/css/paginasDeServicoUsr.css
+++ b/css/paginasDeServicoUsr.css
@@ -9,6 +9,26 @@
   font-weight: bold;
 }
 
+*::selection {
+  color: #ffffff;
+  background: #0d6a5a;
+  border-radius: 10px;
+  text-shadow: -2px 2px 10px rgb(255, 255, 255);
+  padding: 15px;
+}
+*::-webkit-scrollbar-thumb{
+    height: 10%;
+    width: 10px;
+border-radius: 25px;
+background-color: rgb(0, 123, 111);
+}
+*::-webkit-scrollbar{
+  width: 10px;
+  height: 90%;
+  background-color: rgb(12, 12, 12);
+  border-radius: 25px;
+}
+
 
 html, body{
     background: black !important;
@@ -267,7 +287,7 @@ html, body{
   overflow: hidden;
   margin-top: 25px !important;
   border: transparent 5px solid;
-  box-shadow: 0 0 15px #11574d ;
+  /* box-shadow: 0 0 15px #11574d ; */
 }
 .servico:nth-child(even) {
   background-color:#237a6c;  
@@ -357,7 +377,7 @@ html, body{
 .dados_orcamento{
   font-size: 28px !important;
   color: rgb(238, 238, 238);
-  width: 60%;
+  width: 90%;
   text-align: center;
   background: #081a17;
   padding: 1%;
@@ -504,6 +524,7 @@ html, body{
   display: flex;
   justify-content: space-evenly !important;
   width: 100%;
+  margin-top: 15px;
   /* background-color:#237a6c;   */
   
 }
@@ -573,7 +594,7 @@ html, body{
   padding: 25px;
   border-radius: 25px;
   height: 40%;
-  width: 30%;
+  width: 35%;
   background-color:rgb(18, 67, 56);  
   color: rgb(222, 222, 222);
 }
