--- a/css/carroselDeComentarios.css
+++ b/css/carroselDeComentarios.css
@@ -1,16 +1,42 @@
 .carousel {
     position: relative;
-    width: 300px; /* Defina a largura do seu carrossel */
+    width: 100%;
     overflow: hidden;
-}
-.carousel-item {
-   display: block !important;
-}
-.carousel-inner {
+    height: 100%;
     display: flex;
-    transition: transform 0.5s ease;
+    flex-direction: column;
+    place-items: center;
+    padding-top: 25%;
+    padding-top: 25%;
 }
 
+.carousel-inner {
+
+    transition: transform 0.5s ease;
+  
+}
+
+.carousel-item {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    justify-content: center;
+    place-items: center;
+    display: flex;
+    flex-direction: column;
+
+    
+ 
+}
+.mensagemAvaliação{
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding-left: 8%;
+    padding-right: 10%;
+    text-align: center;
+   
+}
 .carousel-control {
     position: absolute;
     top: 50%;
@@ -19,13 +45,52 @@
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     padding: 10px;
-    text-decoration: none;
 }
 
-.carousel-control.prev {
-    left: 0;
+.carousel-control.prev, .carousel-control.next{
+    font-weight: bold;
+    color: rgb(16, 102, 103) !important;
+background-color: black;
+    box-shadow: rgb(16, 93, 103)  0 0 5px;
+    border-radius:  50%;
+    width: 35px !important;
+    height: 45px !important;
+}
+.carousel-control.prev{
+    left: 20px;
+    width: 35px !important;
+
 }
 
 .carousel-control.next {
-    right: 0;
+    right: 20px;
+    margin-top: -10px;
+}
+.carousel-control.prev:hover, .carousel-control.next:hover{
+    scale: 1.1;
+    transition: 0.5s;
+
+}
+
+.carousel-indicators {
+    text-align: center;
+    padding: 10px 0;
+}
+
+.carousel-indicators .indicator {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background-color: gray;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.carousel-indicators .indicator.active {
+    background-color: black;
+}
+
+.carousel-item.active {
+    display: block;
 }
