--- a/css/viewPerfilPfForUsr.css
+++ b/css/viewPerfilPfForUsr.css
@@ -396,7 +396,7 @@ form {
     display: inline-block;
     width: 10px;
     height: 10px;
-    background-color: #4c00ff;
+    background-color: gray;
     border-radius: 50%;
     margin: 40px 5px 5px 5px;;
     cursor: pointer;
