--- a/css/prof.css
+++ b/css/prof.css
@@ -20,6 +20,10 @@ body{
             margin-top: 3%;        
         }
 
+        .conteiner_of_stars {
+            margin: 10px 0;
+        }
+
         .professional {
             background-color: rgba(0, 0, 0, 0.822) !important;
             cursor: pointer;
