--- a/css/style_lg.css
+++ b/css/style_lg.css
@@ -13,6 +13,90 @@
   padding: 15px;
 }
 
+
+
+.closeButton {
+  font-size: 20px;
+  padding: 15px !important;
+  padding-top: 10px !important;
+  margin: 10px 0 0 40%;
+  --green: rgb(0, 128, 111);
+  height: 50px !important;
+  position: relative;
+  border-radius: 0.6em;
+  transition: all 0.3s;
+  line-height: 1.4em;
+  box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.685), 0 0 9px 3px rgba(27, 253, 156, 0.1);
+  background: black;
+  color: var(--green);
+  border: 2px solid var(--green);
+  text-transform: uppercase;
+
+}
+.closeButton:hover {
+  color: rgb(255, 255, 255);
+  text-shadow: -2px 2px 10px #22a6ad;
+  box-shadow: inset 0 0 10px rgba(0, 128, 111, 0.767),
+    0 0 9px 3px rgba(27, 253, 156, 0.2);
+}
+.closeButton {
+  margin: 20px 0 0 0;
+  width: 191px;
+  text-decoration: none;
+}
+
+.closeButton:hover {
+  scale: 1.2;
+  text-decoration: underline;
+  transition: 0.3s;
+}
+.opa {
+  background-color: #000000;
+    color: #187c6b;
+    padding: 20px;
+    height: 300px;
+    border: 5px solid #00917e;
+    border-radius: 30px;
+    filter: drop-shadow(2px 4px 60px);
+    font-size: 32pt;
+    display: flex;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30%;
+    text-align: center;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    transition: opacity 1s ease;
+    animation: fadeIn 2s ease forwards;
+}
+
+.cap_shadow{
+  background: #000000b3;
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  z-index: 99;
+  top: 80px;
+  left: 0;
+  transition: opacity 1s ease;
+  animation: fadeIn 2s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 body,
 html {
   margin: 0%;
